--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: stoplightio/spectral-action@v0.6.1
         with:
-          file_glob: 'openapi.yaml'
+          file_glob: 'openapi.yml'
