--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Multi-file boilerplate for Open API Specification.",
   "main": "index.js",
   "scripts": {
-    "build": "swagger-cli bundle src/openapi.yaml --outfile _build/openapi.yaml --type yaml",
-    "test": "npm run build && spectral lint _build/openapi.yaml",
-    "preview": "npm run build && redoc-cli serve _build/openapi.yaml --options.onlyRequiredInSamples",
-    "html": "npm run build && redoc-cli bundle _build/openapi.yaml  --output _build/index.html --options.onlyRequiredInSamples",
+    "build": "swagger-cli bundle src/openapi.yml --outfile _build/openapi.yml --type yaml",
+    "test": "npm run build && spectral lint _build/openapi.yml",
+    "preview": "npm run build && redoc-cli serve _build/openapi.yml --options.onlyRequiredInSamples",
+    "html": "npm run build && redoc-cli bundle _build/openapi.yml  --output _build/index.html --options.onlyRequiredInSamples",
     "clean": "rm -r _build",
     "deploy": "./ci/deploy.sh"
   },
